# Python-Project-Structuring

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .env.sample  README.md  alembic.ini  poetry.toml  pyproject.toml
{{cookiecutter.project_name}}/alembic/: env.py
{{cookiecutter.project_name}}/src/core/: abstracts.py  error_codes.py  event_dispatcher.py  exceptions.py  protocols.py  settings.py
{{cookiecutter.project_name}}/src/core/database/: __init__.py  async_connections.py  connections.py
{{cookiecutter.project_name}}/src/core/domain/: commands.py  events.py  models.py
{{cookiecutter.project_name}}/src/core/messengers/: email.py
{{cookiecutter.project_name}}/src/core/queues/: local.py  sqs.py
{{cookiecutter.project_name}}/src/core/storages/: local.py  s3.py
{{cookiecutter.project_name}}/src/core/utils/: __init__.py  event_dispatcher.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/adapters/: orm.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/adapters/repository/: __init__.py  django.py  fake.py  sql.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/domain/: commands.py  constants.py  events.py  models.py  validators.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/entrypoints/: route_handlers.py  routes.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/services/: abstracts.py  event_handlers.py  handlers.py
{{cookiecutter.project_name}}/src/{{cookiecutter.project_slug}}/tests/tests_unit/: fixtures.py  (+1 more)
